uitlijning op videopagina.xhtml

--- a/distributor/web/src/main/webapp/CSS/default.css
+++ b/distributor/web/src/main/webapp/CSS/default.css
@@ -36,3 +36,11 @@ h2#jumbotron_header{
 	margin-right: auto;
 	
 }
+.addVideo{
+height: 30px;
+margin-left: 10px;
+}
+.addVideo2{
+height: 30px;
+margin-left: 10px;
+}
